fix (missing) .card overflow in sketchy

--- a/css/bootswatch-sketchy/bootstrap.css
+++ b/css/bootswatch-sketchy/bootstrap.css
@@ -10163,6 +10163,7 @@ pre {
 
 .card {
   border-color: inherit;
+  overflow: initial;
 }
 
 .card-thumbnail a {
