--- a/scss/bootswatch/_sketchy.scss
+++ b/scss/bootswatch/_sketchy.scss
@@ -20,6 +20,7 @@
 
 .card {
   border-color: inherit;
+  overflow: initial;
 }
 
 .card-thumbnail {
